# 7407-DriveCode-Template-v2

./: .gitignore  config.py  constants.py  pyproject.toml  robot.py  robot_systems.py  simgui-window.json
AdvantageScope/: README.md
AdvantageScope/Robot_2025Main/: config.json
command/: __init__.py  drivetrain.py
command/autonomous/: custom_pathing.py  path_commands.py  trajectory.py
deploy/choreo/: 4_piece.chor  Four L4 Left.traj  Four L4 Right.traj  New Path.traj  test path.traj
deploy/pathplanner/: settings.json
deploy/pathplanner/paths/: New Path.path
oi/: OI.py  keymap.py
sensors/: __init__.py  field_odometry.py  leds.py  photonvision.py
subsystem/: __init__.py  drivetrain.py  leds.py
tests/: __init__.py  conftest.py  mechanism_setup.py  pyfrc_test.py  test_examples.py
toolkit/motors/: __init__.py  ctre_motors.py  rev_motors.py
toolkit/subsystem_templates/drivetrain/: __init__.py  swerve_drivetrain.py
units/: SI.py  __init__.py
utils/: __init__.py  can_optimizations.py  field.py  local_logger.py
