#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2025.2.1.0"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    "apriltag",
    "commands2",
    # "cscore"
    # "navx"
    "pathplannerlib",
    # "phoenix5",
    "phoenix6",
    # "playingwithfusion"
    "rev",
    # "romi"
    "sim"
    # "xrp"
]

# Other pip packages to install
requires = [
    "numpy",
    "photonlibpy"
]

[tool.poetry]
name = "7407-drivecode-template-v2"
version = "0.1.0"
description = ""
authors = ["cyrusnaficy <cyrus.naficy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
